--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Watching your favorite TV Series",
   "version": "1.0.0",
   "action": {
-    "default_popup": "index.html",
+    "default_popup": "./popup.html",
     "default_icon": "./images/logo.png"
   }
 }
